# yoto-maker

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  pyproject.toml  requirements.txt
.playwright-mcp/: page-2026-07-18T02-13-01-742Z.yml
docs/: BUILDER_QUEUE.md  DESIGN.md  DEVELOPERS.md  INSTALL-FOR-MOM.md  RELEASE_NOTES.md  SETUP-YOTO-CONNECTION.md
docs/architecture/: README.md
docs/architecture/decisions/: 2026-07-21-file-upload-on-job-system.md  2026-07-21-repair-existing-cards.md
docs/design-handoffs/: README.md
packaging/: YotoMaker.spec  make_icon.py  make_logo.py  yoto_maker_launch.py
tests/: conftest.py  test_api.py  test_audio_images_labels.py  test_card_view_markup.py  test_client_id_ui_markup.py  test_client_id_validation.py  test_httpexception_reaches_user.py  test_models_and_settings.py  test_multi_upload_markup.py  test_repair.py  test_settings_link_transition_e2e.py  test_sources.py  test_static_cache.py  test_updater.py  test_yoto_auth.py  test_yoto_client.py
tests/fixtures/: card_sample.json
yoto_maker/: __init__.py  autostart.py  config.py  logging_setup.py  main.py  repair.py  settings.py  tools.py  tray.py  updater.py
yoto_maker/audio/: normalize.py
yoto_maker/images/: __init__.py  ai.py  emoji.py  icon.py  library.py  picture.py
yoto_maker/labels/: __init__.py  pdf.py
yoto_maker/server/: __init__.py  app.py  draft.py  jobs.py  runner.py
yoto_maker/server/static/: app.js  (+2 more)
yoto_maker/sources/: __init__.py  audiofile.py  base.py  youtube.py
yoto_maker/yoto/: __init__.py  auth.py  client.py  models.py  repair.py
(+13 files in other folders)
